--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth0-app",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
   "dependencies": {
     "auth0-js": "9.8.0",
     "auth0-lock": "11.10.0",
